--- a/css/index.css
+++ b/css/index.css
@@ -78,8 +78,12 @@
     background-color: pink;
 }
 .list-goods{
+    float: left;
     height: 300px;
     background-color: #fff;
+}
+.list-goods:last-child{
+    margin-right: 0;
 }
 .list-goods a img{
     width: 180px;
